# OpenDevOps

./: .gitignore  LICENSE  MANIFEST.in  README.md  analyze.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
devops/: __init__.py  __main__.py  analysis.py  cli.py  config.py  config_cmd.py  extract.py  ui.py
devops/models/: __init__.py  base.py  openai.py  zhipuai.py
devops/scan/: __init__.py  scan.cpp  scan.h  scan_bindings.cpp
devops/tree_sitter/: __init__.py  build_sources.py  languages.cpp  languages.h  tree_sitter_bindings.cpp  vendor_fetch.py
scripts/: build_release.sh  ensure_vendor_tree_sitter.py  vendor_tree_sitter.sh  verify_wheel.py
