[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-analyzer"
version = "0.1.5"
description = "扫描源码、提取代码块、大模型分析并生成 README.md"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ZHUHK" }]
dependencies = [
    "tree-sitter>=0.21.0,<0.22; python_version < '3.13'",
    "tree-sitter>=0.22.0,<0.25; python_version >= '3.13'",
    "openai>=1.40.0",
]

[project.optional-dependencies]
zhipuai = ["zhipuai>=2.0.0"]
all = ["zhipuai>=2.0.0"]
build = ["build>=1.2.0"]

[project.scripts]
devops = "devops.cli:main"

[project.urls]
Homepage = "https://github.com/dadaozhichen/OpenDevOps"

[tool.setuptools.packages.find]
where = ["."]
include = ["devops*"]

[tool.setuptools.package-data]
devops = ["py.typed"]
